--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.3.0",
     "firebase-tools": "^12.5.2",
+    "openai": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
